[gd_scene load_steps=17 format=2]

[ext_resource path="res://Escenas/enemy.gd" type="Script" id=1]
[ext_resource path="res://Overlap/Hurtbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://Overlap/Hitbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://UI/Stats.tscn" type="PackedScene" id=4]
[ext_resource path="res://Enemigos/PlayerDetectionZone.tscn" type="PackedScene" id=5]
[ext_resource path="res://Enemigos/WanderController.tscn" type="PackedScene" id=6]
[ext_resource path="res://StartBlink.tres" type="Animation" id=7]
[ext_resource path="res://Shaders/Blink.shader" type="Shader" id=8]
[ext_resource path="res://Overlap/SoftCollision.tscn" type="PackedScene" id=15]

[sub_resource type="ShaderMaterial" id=1]
resource_local_to_scene = true
shader = ExtResource( 8 )
shader_param/active = false

[sub_resource type="CapsuleShape2D" id=2]
radius = 4.33877
height = 0.0

[sub_resource type="CapsuleShape2D" id=3]
radius = 7.0

[sub_resource type="CapsuleShape2D" id=4]
radius = 4.5
height = 6.0

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 75, 30.402 )

[sub_resource type="CircleShape2D" id=6]
radius = 7.37092

[sub_resource type="Animation" id=7]
resource_name = "StopBlink"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="enemy" type="KinematicBody2D"]
position = Vector2( -1.07066, -3.83777 )
collision_layer = 16
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = SubResource( 1 )
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.314983, 2.20486 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="Hurtbox" parent="." instance=ExtResource( 2 )]
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0.222975, 2.75004 )
rotation = 1.5708
shape = SubResource( 3 )

[node name="Hitbox" parent="." instance=ExtResource( 3 )]
collision_mask = 4

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 0.222977, 2.75004 )
rotation = 1.5708
shape = SubResource( 4 )

[node name="Stats" parent="." instance=ExtResource( 4 )]
max_health = 2

[node name="WanderController" parent="." instance=ExtResource( 6 )]

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 5 )]

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
position = Vector2( 0, -7.063 )
shape = SubResource( 5 )

[node name="SoftCollision" parent="." instance=ExtResource( 15 )]

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
position = Vector2( 0.15749, 2.51984 )
shape = SubResource( 6 )

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( 10.009, -0.223 )
enabled = true
cast_to = Vector2( 0, 11 )

[node name="RayCast2D2" type="RayCast2D" parent="."]
position = Vector2( -7.617, 0 )
enabled = true
cast_to = Vector2( 0, 11 )

[node name="BlinkAnimationPlayer" type="AnimationPlayer" parent="."]
anims/StartBlink = ExtResource( 7 )
anims/StopBlink = SubResource( 7 )

[node name="Tiempo_Sin_Deteccion" type="Timer" parent="."]
one_shot = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
max_distance = 300.0
attenuation = 5.27803
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="invincibility_ended" from="Hurtbox" to="." method="_on_Hurtbox_invincibility_ended"]
[connection signal="invincibility_started" from="Hurtbox" to="." method="_on_Hurtbox_invincibility_started"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]
[connection signal="timeout" from="Tiempo_Sin_Deteccion" to="." method="_on_Tiempo_Sin_Deteccion_timeout"]

[editable path="Hurtbox"]

[editable path="Hitbox"]

[editable path="PlayerDetectionZone"]

[editable path="SoftCollision"]
